src/server/run/snapshots/viguno__server__actix_server__hpo_genes__test__hpo_genes_ncbi_gene_id_exact_no_hpo_terms.snap
---
source: src/server/actix_server/hpo_genes.rs
expression: "&run_query(\"/hpo/genes?gene_id=2348\").await?"
---
version:
  hpo: 2023-04-05
  viguno: 0.0.0
query:
  gene_id: "2348"
  gene_symbol: ~
  match_: ~
  max_results: 100
  hpo_terms: false
result:
  - gene_ncbi_id: 2348
    gene_symbol: FOLR1
    hgnc_id: "HGNC:3791"

